# rhfcore

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: CConfig.h  CDataset.h  CDetectionResult.h  CPatch.h  CRForest.h  CRTree.h  HaarLike.h  HoG.h  util.h
src/: CConfig.cpp  CDataset.cpp  CDataset_flymake.cpp  CRForest.cpp  CRTree.cpp  HaarLike.cpp  HoG.cpp  util.cpp  util_flymake.cpp
